Align forwarding with configuration API
