# internal/api/api.go
@@ -116,10 +116,8 @@ func (a *API) Initialize() error {
 
 	group.GET("/paths/list", a.onPathsList)
 	group.GET("/paths/get/*name", a.onPathsGet)
-	group.GET("/paths/forward/list/*name", a.onForwardList)
-	group.GET("/paths/forward/get/:id/*name", a.onForwardGet)
-	group.POST("/paths/forward/add/*name", a.onForwardAdd)
-	group.DELETE("/paths/forward/remove/:id/*name", a.onForwardRemove)
+	group.GET("/paths/forward/list", a.onForwardList)
+	group.GET("/paths/forward/get", a.onForwardGet)
 
 	if !interfaceIsEmpty(a.HLSServer) {
 		group.GET("/hlsmuxers/list", a.onHLSMuxersList)
